--- a/package.json
+++ b/package.json
@@ -19,10 +19,17 @@
     "url": "https://github.com/VitaliiMoskalyk/goit-js-hw-12-countries/issues"
   },
   "devDependencies": {
+    "@pnotify/core": "^5.2.0",
     "parcel-bundler": "^1.12.5",
     "parcel-plugin-handlebars-precompile": "^1.0.2",
     "parcel-plugin-nuke-dist": "^1.0.1",
     "posthtml-include": "^1.6.2",
     "sass": "^1.32.8"
+  },
+  "dependencies": {
+    "@pnotify/confirm": "^5.2.0",
+    "@pnotify/desktop": "^5.2.0",
+    "handlebars": "^4.7.7",
+    "lodash.debounce": "^4.0.8"
   }
 }
